<resources>
    <string name="app_name">Password Notes</string>
    <string name="input_form_weight_title">重要性：</string>
    <string name="input_form_weight_radio_extreme">很高</string>
    <string name="input_form_weight_radio_high">较高</string>
    <string name="input_form_weight_radio_medium">一般</string>
    <string name="input_form_weight_radio_low">较低</string>
    <string name="input_form_tag_title">标签：</string>
    <string name="input_form_name_title">账号：</string>
    <string name="input_form_password_title">密码：</string>
    <string name="input_form_remark_title">备注：</string>
    <string name="input_form_button_cancel_text">取消</string>
    <string name="input_form_button_confirm_text">添加</string>
    <string name="action_bar_search_view_text">通过标签和备注搜索</string>
    <string name="action_bar_title_text"><![CDATA[Password Notes]]></string>
    <string name="action_bar_search_view_hint_text">由标签或备注搜索</string>
    <string name="edit_form_id_title">序号：</string>
    <string name="edit_form_id_text">0</string>
    <string name="edit_form_tag_title">标签：</string>
    <string name="edit_form_name_title">账号：</string>
    <string name="edit_form_password_title">密码：</string>
    <string name="edit_form_remark_title">备注：</string>
    <string name="edit_form_weight_title">重要性：</string>
    <string name="edit_form_time_title">时间：</string>
    <string name="edit_form_time_text">1706889600000</string>
    <string name="edit_form_priority_title">优先级：</string>
    <string name="edit_form_submit_button_text">提交修改</string>
    <string name="edit_form_recycler_button_text">删除账户</string>
    <string name="drawer_page_recycler_text">废纸篓</string>
    <string name="action_bar_edit_item_title">查看和编辑数据</string>
    <string name="action_bar_recycle_item_title">点击恢复-长按永久删除</string>
    <string name="item_list_card_tag_title">标签名称</string>
    <string name="item_list_card_name_text">Favian096</string>
    <string name="item_list_card_password_text">Du_du-0203</string>
    <string name="item_list_card_remark_text">没有备注......</string>
    <string name="item_list_recycle_card_tag_text">标签名称</string>
    <string name="item_list_recycle_card_name_text">Favian096</string>
    <string name="item_list_recycle_card_password_text">Du_du-0203</string>
    <string name="item_list_recycle_card_remark_text">没有备注......</string>
    <string name="drawer_update_item_list_text">刷新列表</string>
    <string name="drawer_page_text_parse_text">文本解析</string>
    <string name="text_parse_prompt_edit_text">示例</string>
    <string name="text_parse_submit_edit_text">解析</string>
    <string name="action_bar_text_parse_title">解析文本并新增数据</string>
    <string name="text_parse_edit_text_hint_text">!请根据示例的格式录入数据:
    \n1.依照示例不要输入无关信息
    \n2.仅支持输入: 标签(必填)、账号、密码
    \n3.每行数据输入后要换行再输入另一条
    \n4.每个账户(卡片数据)之间空一行
    \n5.默认重要性"一般"; 不要输入备注</string>
    <string name="text_parse_prompt_text">WeChat\n1706889600000\npassword_birthday\n\n
    Alipay\n手机号登录\n\nTaobao\nUse AliPay Log in\n......\n</string>
    <string name="drawer_page_output_text">数据备份</string>
    <string name="drawer_page_input_text">数据恢复</string>
    <string name="drawer_page_export_text">数据导出</string>
    <string name="drawer_page_settings_text">设置</string>
    <string name="action_bar_setting_title">设置</string>
    <string name="setting_hidden_item_list_name_text">列表数据直接显示账号</string>
    <string name="setting_hidden_item_list_password_text">列表数据直接显示密码</string>
    <string name="fast_add_item_short_text">快速添加</string>
    <string name="add_form_bottom_message">添加成功后可进入App中查看</string>
    <string name="add_form_top_message">✍快速添加</string>
</resources>