<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_edit_card_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:background="?android:attr/selectableItemBackground"
        android:transitionName="item_translation_anim"
        app:cardBackgroundColor="@color/system_gray_little"
        app:cardCornerRadius="10dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/inputFormComponents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/system_gray_little"
            android:orientation="vertical"
            android:padding="15dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="@string/edit_form_id_title"
                    android:textColor="@color/system_gray_deep"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/edit_form_id_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="@string/edit_form_id_text"
                    android:textColor="@color/system_gray_deep"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="@string/edit_form_time_title"
                    android:textColor="@color/system_gray_deep"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/edit_form_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="@string/edit_form_time_text"
                    android:textColor="@color/system_gray_deep"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="@string/edit_form_weight_title"
                    android:textColor="@color/system_gray_deep"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/edit_form_weight_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/edit_form_weight_radio_extreme"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/weight_radio_selector_extreme"
                        android:button="@null"
                        android:checked="false"
                        android:gravity="center"
                        android:text="@string/input_form_weight_radio_extreme"
                        android:textColor="@drawable/weight_radio_selector_text_color"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/edit_form_weight_radio_high"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/weight_radio_selector_high"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/input_form_weight_radio_high"
                        android:textColor="@drawable/weight_radio_selector_text_color"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/edit_form_weight_radio_medium"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/weight_radio_selector_medium"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/input_form_weight_radio_medium"
                        android:textColor="@drawable/weight_radio_selector_text_color"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/edit_form_weight_radio_low"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/weight_radio_selector_low"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/input_form_weight_radio_low"
                        android:textColor="@drawable/weight_radio_selector_text_color"
                        android:textSize="14sp" />

                </RadioGroup>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="@string/edit_form_tag_title"
                    android:textColor="@color/system_gray_deep"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_form_tag_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:hint="必填内容"
                    android:inputType="text"
                    android:textCursorDrawable="@drawable/edit_text_cursor_necessary_shape"
                    android:theme="@style/edit_text_line_style" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="@string/edit_form_name_title"
                    android:textColor="@color/system_gray_deep"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_form_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:inputType="textVisiblePassword"
                    android:textCursorDrawable="@drawable/edit_text_cursor_normal_shape"
                    android:theme="@style/edit_text_line_style" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="@string/edit_form_password_title"
                    android:textColor="@color/system_gray_deep"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_form_password_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:inputType="textVisiblePassword"
                    android:textCursorDrawable="@drawable/edit_text_cursor_normal_shape"
                    android:theme="@style/edit_text_line_style" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="@string/edit_form_remark_title"
                    android:textColor="@color/system_gray_deep"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_form_remark_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:inputType="text"
                    android:textCursorDrawable="@drawable/edit_text_cursor_normal_shape"
                    android:theme="@style/edit_text_line_style" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="@string/edit_form_priority_title"
                    android:textColor="@color/system_gray_deep"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_form_priority_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:hint="仅输入不大于1024的数字"
                    android:inputType="numberSigned"
                    android:textCursorDrawable="@drawable/edit_text_cursor_normal_shape"
                    android:theme="@style/edit_text_line_style" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/edit_form_recycler_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_form_recycler_button_text"
                    android:textColor="@color/system_red"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/edit_form_submit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/edit_form_submit_button_text"
                    android:textColor="@color/system_blue"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>